# fomos-news

./: .env.example  .gitignore  Cargo.toml  README.md
.claw/decisions/: adr-001-backend-stack.md
.claw/handoff/: delivery-notes.md
.claw/plans/: implementation-plan.md
.claw/specs/: api-design.md
.claw/tasks/: task-board.md
.claw/worklog/: progress.md
docs/: routing-and-runbook.md
extracted/design-spec/: fomos-news-design-spec.md
extracted/repo/fomos-news/: .env.example  README.md  ideas.md  package.json  vite.config.ts
extracted/repo/fomos-news/client/: index.html
extracted/repo/fomos-news/client/src/: App.tsx  index.css
extracted/repo/fomos-news/client/src/components/: Layout.tsx  SubscribeModal.tsx
extracted/repo/fomos-news/client/src/lib/: api.ts  sampleData.ts
extracted/repo/fomos-news/client/src/pages/: BriefingPage.tsx  EcosystemPage.tsx  Home.tsx  LeaderboardPage.tsx  MarketsPage.tsx
migrations/: 202603190001_initial_schema.down.sql  202603190001_initial_schema.up.sql
src/: app.rs  config.rs  db.rs  error.rs  ingest.rs  main.rs  state.rs
src/routes/: auth.rs  briefings.rs  health.rs  mod.rs  news.rs  subscribe.rs
